cinnamon/cinnamon.css
/* ... */
.message-dialog-content {
  spacing: 18px; }
  .message-dialog-content .message-dialog-title {
    text-align: center; }
  .message-dialog-content .message-dialog-description {
    text-align: center; }
  .message-dialog-content .message-dialog-caption {
    text-align: center; }

.run-dialog .dialog-content-box {
  margin: 4px; }

.run-dialog-description {
  text-align: center;
  color: #aeaeae; }
  .run-dialog-description.error {
    color: #FC4138; }

.run-dialog-completion-box {
  padding-top: 6px;
  padding-left: 12px; }

.run-dialog-entry {
  width: 20em;
  height: 1.2em; }

.prompt-dialog {
  width: 28em; }
  .prompt-dialog .dialog-content-box {
    spacing: 16px;
    margin-bottom: 12px; }
  .prompt-dialog-password-entry {
    width: 20em; }
  .prompt-dialog-password-layout {
    spacing: 8px; }
  .prompt-dialog-error-label, .prompt-dialog-info-label, .prompt-dialog-null-label {
    text-align: center; }
  .prompt-dialog-error-label {
    color: #FC4138; }

.polkit-dialog-user-layout {
  text-align: center;
  spacing: 2px; }

.polkit-dialog-user-combo {
  border-radius: 6px;
  padding: 6px 36px; }
  .polkit-dialog-user-combo:insensitive {
    color: #e1e1e1; }

.audio-device-selection-dialog {
  min-width: 24em; }
  .audio-device-selection-dialog .audio-selection-box {
    spacing: 12px; }
    .audio-device-selection-dialog .audio-selection-box .audio-selection-device {
      border-radius: 20px; }
      .audio-device-selection-dialog .audio-selection-box .audio-selection-device .audio-selection-device-box {
        padding: 12px;
        spacing: 12px; }
      .audio-device-selection-dialog .audio-selection-box .audio-selection-device .audio-selection-device-icon {
        icon-size: 64px; }

.workspace-switch-osd, .info-osd, .media-keys-osd {
  background-color: #162430;
  border: 1px solid #303f44;
  border-radius: 20px;
  text-align: center;
  padding: 24px; }

.media-keys-osd {
  margin-bottom: 1em;
  border-radius: 20px;
  font-weight: bold;
  spacing: 12px;
  padding: 12px 24px; }
  .media-keys-osd > * {
    spacing: 12px; }
  .media-keys-osd StIcon {
    icon-size: 32px; }
  .media-keys-osd StLabel:ltr {
    margin-right: 6px; }
  .media-keys-osd StLabel:rtl {
    margin-left: 6px; }
  .media-keys-osd .level {
    min-width: 160px;
    -barlevel-height: 6px;
    -barlevel-background-color: #303f44;
    -barlevel-active-background-color: #e1e1e1;
    -barlevel-amplify-color: #F27835;
    -barlevel-amplify-separator-width: 3px; }
    .media-keys-osd .level:ltr {
      margin-right: 6px; }
    .media-keys-osd .level:rtl {
      margin-left: 6px; }
  .media-keys-osd .level-bar {
    border-radius: 20px;
    background-color: #e1e1e1; }

.info-osd {
  font-size: 1.2em;
  font-weight: 700;
  text-align: center; }

.workspace-switch-osd {
  min-width: 140px;
  margin-bottom: 1em;
  border-radius: 20px;
  font-weight: bold;
  padding: 12px 36px 0 36px; }
  .workspace-switch-osd-indicator-box {
    spacing: 12px; }
  .workspace-switch-osd-indicator {
    background-color: rgba(225, 225, 225, 0.5);
    padding: 3px;
    margin: 15px;
    border-radius: 36px; }
    .workspace-switch-osd-indicator:active {
      background-color: #00b5d4;
      padding: 6px;
      margin: 12px; }

.monitor-label {
  border-radius: 0;
  color: black;
  padding: 12px;
  text-align: center; }

.resize-popup {
  color: #e1e1e1;
  background-color: #162430;
  border-radius: 6px;
  padding: 12px; }


/* MINT 22.3 */

.appmenu-category-button-greyed, .appmenu-category-button-selected, .appmenu-category-button, .appmenu-application-button-selected, .appmenu-application-button, .appmenu-sidebar-button {
  padding: 7px;
  spacing: 5px;
  border-radius: 2px; }

.appmenu-background .popup-menu-content {
  padding: 0; }

.appmenu-main-box {
  spacing: 10px; }

.appmenu-right-box {
  spacing: 5px;
  padding: 10px 10px; }

.appmenu-categories-applications-box {
  spacing: 15px; }
  .appmenu-categories-applications-box:top {
    padding-top: 5px; }

.appmenu-applications-box {
  padding-right: 5px; }

.appmenu-search-box {
  spacing: 10px; }

.appmenu-sidebar {
  padding: 15px 0px;
  background-color: rgba(37, 49, 57, 0.51); /* same as .menu-favorites-box bg */
  border-radius: 6px 0 0 0;
  border-right-width: 1px;
  border-color: rgba(116, 25, 102, 0.05); /* same as .menu-favorites-box border color */
  spacing: 5px; }
  .menu-top .appmenu-sidebar {
    border-radius: 0 0 0 6px; }
  .menu-bottom .appmenu-sidebar {
    border-radius: 6px 0 0 0; }
  .menu-left .appmenu-sidebar {
    border-radius: 0; }
  .menu-right .appmenu-sidebar {
    border-radius: 0; }
  .appmenu-sidebar .appmenu-system-button {
    background-color: #30384a; } /* logout/lock buttons but inside menu sidebar*/
    .appmenu-sidebar .appmenu-system-button-lock:hover {
      background-color: #4b5671; }
    .appmenu-sidebar .appmenu-system-button-logout:hover {
      background-color: #4b5671; }
    .appmenu-sidebar .appmenu-system-button-shutdown {
      background-color: #30384a; }
    .appmenu-sidebar .appmenu-system-button-shutdown:hover {
      background-color: #4b5671; }

.appmenu-system-box {
  spacing: 10px; }

.appmenu-sidebar-button {
  padding: 4px 7px;
  margin: 0 10px; }
  .appmenu-sidebar-button:hover {
    background-color: rgba(160, 175, 186, 0.3); /* menu sidebar highglight color */
    border-color: transparent; }

.appmenu-system-button {
  color: white;
  padding: 8.4px;
  border: 1px solid transparent;
  border-radius: 9999px;
  background-color: #30384a; } /* logout/lock buttons */
  .appmenu-system-button-shutdown {
    background-color: #30384a; }
  .appmenu-system-button-lock:hover {
    background-color: #4b5671; }
  .appmenu-system-button-logout:hover {
    background-color: #4b5671; }
  .appmenu-system-button-shutdown:hover {
    background-color: #4b5671; }

.appmenu-application-button-label {
  padding: 0; }

.appmenu-application-button-description {
  color: #636363; }
/* ... */

